syntax = "proto3";

package teaching.v1;

import "google/api/annotations.proto";

option go_package = "online-teaching/api/teaching/v1;v1";
option java_multiple_files = true;
option java_package = "dev.kratos.api.teaching.v1";
option java_outer_classname = "TeachingProtoV1";

// The course service definition.
service Course {
  rpc SearchCourse (SearchCoursesRequest) returns (SearchCoursesReply) {
    option (google.api.http) = {
      get: "/teaching/api/v1/courses"
    };
  }

  rpc GetCourse (GetCourseRequest) returns (GetCourseReply) {
    option (google.api.http) = {
      get: "/teaching/api/v1/course/{course_id}"
    };
  }

  rpc GetCourseDetail (GetCourseDetailRequest) returns (GetCourseDetailReply) {
    option (google.api.http) = {
      get: "/teaching/api/v1/course/{course_id}"
    };
  }

  rpc DeleteCourse (DeleteCourseRequest) returns (DeleteCourseReply) {
    option (google.api.http) = {
      delete: "/teaching/api/v1/course/{course_id}"
    };
  }

  rpc UpdateCourse (UpdateCourseRequest) returns (UpdateCourseReply) {
    option (google.api.http) = {
      put: "/teaching/api/v1/course"
      body: "*"
    };
  }

  rpc CreateCourse (CreateCourseRequest) returns (CreateCourseReply) {
    option (google.api.http) = {
      post: "/teaching/api/v1/course"
      body: "*"
    };
  }
}

message SearchCoursesRequest {
  string keyword = 1;
}

message SearchCoursesReply {
  message Teacher {
    int32  teacher_id = 1;
    string name       = 2;
    string desc       = 3;
    string avatar     = 4;
    string title      = 5;
  }

  message Course {
    string           name           = 1;
    string           desc           = 2;
    string           image          = 3;
    string           tags           = 4;
    string           classification = 5;
    repeated Teacher teachers       = 6;
  }
  message Data {
    repeated Course courses = 1;
  }
  Data   data    = 1;
  int32  code    = 2;
  string message = 3;
}

message GetCourseRequest {
  int32 course_id = 1;
}

message GetCourseReply {
  message Course {
    string name      = 1;
    string desc      = 2;
    string image     = 3;
    string summary   = 4;
    int32  course_id = 5;
  }
  message Data {
    Course course = 1;
  }
  Data   data    = 1;
  int32  code    = 2;
  string message = 3;
}

message GetCourseDetailRequest {
  int32 course_id = 1;
}

message GetCourseDetailReply {
  message Teacher {
    int32  teacher_id = 1;
    string name       = 2;
    string desc       = 3;
    string avatar     = 4;
    string title      = 5;
  }
  message Course {
    string           name           = 1;
    string           desc           = 2;
    string           image          = 3;
    string           summary        = 4;
    string           tags           = 5;
    string           classification = 6;
    fixed64          price          = 7;
    string           detail         = 8;
    enum State {
      OFF = 0;
      ON  = 1;
    }
    State            state          = 9;
    int32            order          = 10;
    bool             is_quality     = 11;
    repeated Teacher teachers       = 12;
  }
  message Data {
    Course course = 1;
  }
  Data   data    = 1;
  int32  code    = 2;
  string message = 3;
}

message DeleteCourseRequest {
  int32 course_id = 1;
}

message DeleteCourseReply {
  message Course {
    string name      = 1;
    string desc      = 2;
    string image     = 3;
    int32  course_id = 4;
  }
  message Data {
    Course course = 1;
  }
  Data   data    = 1;
  int32  code    = 2;
  string message = 3;
}

message CreateCourseRequest {
  string         name           = 1;
  string         desc           = 2;
  string         image          = 3;
  string         summary        = 4;
  string         tags           = 5;
  string         classification = 6;
  fixed64        price          = 7;
  string         detail         = 8;
  enum State {
    OFF = 0;
    ON  = 1;
  }
  State          state          = 9;
  int32          order          = 10;
  bool           is_quality     = 11;
  repeated int32 teacher_id     = 12;
}

message CreateCourseReply {
  message Data {
    string         name           = 1;
    string         desc           = 2;
    string         image          = 3;
    string         summary        = 4;
    string         tags           = 5;
    string         classification = 6;
    fixed64        price          = 7;
    string         detail         = 8;
    enum State {
      OFF = 0;
      ON  = 1;
    }
    State          state          = 9;
    int32          order          = 10;
    bool           is_quality     = 11;
    repeated int32 teacher_id     = 12;
    int32          course_id      = 13;
  }
  Data   data    = 1;
  int32  code    = 2;
  string message = 3;
}

message UpdateCourseRequest {
  int32  course_id = 1;
  string name      = 2;
  string desc      = 3;
  string image     = 4;
  string summary   = 5;
}

message UpdateCourseReply {
  message Course {
    int32  course_id = 1;
    string name      = 2;
    string desc      = 3;
    string image     = 4;
    string summary   = 5;
  }
  message Data {
    Course course = 1;
  }
  Data   data    = 1;
  int32  code    = 2;
  string message = 3;
}
